hphp/test/slow/reified_generics/reified-parent-with-erasure.php.expectf
Fatal error: Class D does not expect a reified generic at index 0 in %s on line 6
